fixed footer spacing

--- a/main/static/scss/skeleton.scss
+++ b/main/static/scss/skeleton.scss
@@ -431,6 +431,7 @@ body {
       width: 100%;
       padding-left: $padding;
       padding-bottom: 2rem;
+      padding-top: 1rem;
       background-color: $bg_skincolor;
 
       .footersection {
